[package]
name = "syntastic"
version = "0.4.0"
authors = ["Sage Mitchell <dev@mx00s.com>"]
edition = "2018"
description = "Generic abstract syntax representation"
repository = "https://github.com/mx00s/syntastic"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.3.0", features = ["ron"] }
proptest = "0.10"
serde_json = "1.0"
